making the links

--- a/public/style.css
+++ b/public/style.css
@@ -298,18 +298,37 @@ html {
   background-color: white;
 }
 
-.article__section,
 .aside__section {
   padding: 2rem 2rem 2rem 2rem;
 }
 
-.ul__item {
-  height: 200px;
-  list-style: none;
+.article__li {
+  width: 100%;
+  height: 100px;
+  border-bottom: #F8F9FB 1px solid;
 }
-.ul__item :before {
-  counter-increment: section;
-  content: counter(section);
+.article__li .li__contents {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.li__link--nolink {
+  text-decoration: none;
+  color: black;
+}
+.li__link--nolink :hover {
+  color: #DDDDDD;
+}
+
+.li__link--nolink:after {
+  content: " (" attr(href) ")";
+  font-size: 0.8em;
+  font-weight: normal;
+  text-transform: none;
+  font-weight: normal;
 }
 
 .u__clearfix {
