--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,6 +64,7 @@ body {
 
 .main__section {
     padding-top: 100px;
+    padding-bottom: 100px;
     @include outer-container;
     .main__article { @include span-columns(9); }
     .main__aside { @include span-columns(3); }
@@ -133,12 +134,20 @@ body {
 .article__li--end {
     text-align: center;
 }
-.load-more-btn{
+.load-more-btn {
     background-color: $hn-orange;
     color: white;
     border-radius: 10px;
     padding-left: 2rem;
     padding-right: 2rem;
+    transition: border 2s;
+    &:hover {
+        background-color: white;
+        border-color: $hn-orange;
+        border: medium solid;
+        border-radius: 10px;
+        color: $hn-orange
+    }
 }
 
 // // __________________________________________________
